--- a/src/Tasks/style.css
+++ b/src/Tasks/style.css
@@ -6,7 +6,7 @@
 
 .list__element {
     display: grid;
-    grid-template-columns: auto 1fr auto;
+    grid-template-columns: auto 1fr 1fr auto;
     grid-gap: 10px;
     align-items: center;
     padding: 20px;
@@ -43,6 +43,7 @@
     width: 30px;
     height: 30px;
     padding: 0;
+    color: white;
 }
 
 .hidden {
